#69 add entry point to start jupyter server (#73)
* Added python script for entry point
* Retrieved path of notebook folder from ansible fact_cache
* Added tests
* Updated existing integration tests
* Updated changes file.
* Fixed ci build
* Use folder from facts in create_image
* Renamed folders in /root: notebook-defaults and notebooks
* Fixed review findings 
* Updated python3.8 from ubuntu1~20.04.8
* For AMI and VM images vs. Docker initial=final
* Relaxed permissions for copied notebook files as owner was still root disabling users to remove or change the files.
* Added support for cli option --warning-as-error to entrypoint.py
* Fixed retrieval and display of jupyter password

Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
@@ -1,3 +1,16 @@
+- name: Set facts for entry point
+  vars:
+    jupyter_virtualenv: "{{user_home}}/jupyterenv"
+  ansible.builtin.set_fact:
+    dss_facts:
+      entrypoint: "{{user_home}}/entrypoint.py"
+      jupyter:
+        virtualenv: "{{ jupyter_virtualenv }}"
+        command: "{{ jupyter_virtualenv }}/bin/jupyter-lab"
+      notebook_folder:
+        initial: "{{ initial_notebook_folder }}"
+        final: "{{user_home}}/notebooks"
+    cacheable: yes
 - name: Update and upgrade apt packages
   apt:
     upgrade: yes
@@ -9,9 +22,18 @@
 - name: Install Poetry
   include_role:
     name: poetry
+- name: Copy Entry Point Script
+  include_role:
+    name: entrypoint
 - name: Install Jupyter
   include_role:
     name: jupyter
+  vars:
+    jupyterlab_virtualenv: "{{ dss_facts.jupyter.virtualenv }}"
+    jupyterlab_command: "{{ dss_facts.jupyter.command }}"
+    jupyterlab_password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='dss') }}"
+    jupyterlab_notebook_folder_initial: "{{ dss_facts.notebook_folder.initial }}"
+    jupyterlab_notebook_folder: "{{ dss_facts.notebook_folder.final }}"
 - name: Clear pip cache
   ansible.builtin.file:
     path: /root/.cache/pip
