--- a/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
@@ -12,11 +12,12 @@
 
 - name: Setup DSS Docker Container
   hosts: docker_container_group
-  gather_facts: false
+  gather_facts: true
   vars:
       ansible_python_interpreter: python3
-      user_name: root
-      user_home: /root
+      user_name: "{{ ansible_user_id }}"
+      user_home: "{{ ansible_env.HOME }}"
+      initial_notebook_folder: "{{ user_home }}/notebook-defaults"
       need_sudo: false
       docker_integration_test: true
   tasks:
