--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
@@ -1,12 +1,14 @@
 ---
 
+jupyterlab_ip: '*'
+jupyterlab_config: "{{user_home}}/.jupyter/jupyter_lab_config.py"
 
-jupyterlab:
-  ip: '*'
-  config: "{{user_home}}/.jupyter/jupyter_lab_config.py"
-  virtualenv: "{{user_home}}/jupyterenv"
-  password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='dss') }}"
-  notebook_folder: "{{user_home}}/notebooks"
+# overridden in include_role
+jupyterlab_virtualenv: "{{ user_home }}/jupyterenv"
+jupyterlab_command: "{{ jupyterlab_virtualenv }}/bin/jupyter-lab"
+jupyterlab_password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='dss') }}"
+jupyterlab_notebook_folder_initial: "{{ user_home }}/notebooks"
+jupyterlab_notebook_folder: "{{ user_home }}/notebooks"
 
 apt_dependencies:
   - rsync=3.1.3-8ubuntu0.7
