--- a/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/dss_docker_playbook.yml
@@ -21,5 +21,5 @@
       need_sudo: false
       docker_integration_test: true
   tasks:
-    - import_tasks: general_setup_tasks.yml
-    - import_tasks: cleanup_tasks.yml
+#     - import_tasks: general_setup_tasks.yml
+#     - import_tasks: cleanup_tasks.yml
