--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,3 +61,8 @@ testpaths = [
     "test"
 ]
 
+# ignore warnings caused by docker lib
+filterwarnings = [
+    "ignore:the imp module is deprecated:DeprecationWarning",
+    "ignore:distutils Version classes are deprecated:DeprecationWarning",
+]
