--- a/aws-code-build/ci/buildspec_release.yaml
+++ b/aws-code-build/ci/buildspec_release.yaml
@@ -32,5 +32,5 @@ phases:
   build:
       commands:
         - poetry run python3 -m exasol.ds.sandbox.main create-vm --default-password "$DEFAULT_PASSWORD" --asset-id "$ASSET_ID" $MAKE_AMI_PUBLIC_OPTION
-        - poetry run python3 -m exasol.ds.sandbox.main create-docker-image --publish --log-level info
+        - poetry run python3 -m exasol.ds.sandbox.main create-docker-image --version "$ASSET_ID" --publish --log-level info
         - poetry run python3 -m exasol.ds.sandbox.main update-release --release-id "$RELEASE_ID" --asset-id "$ASSET_ID"
