--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
@@ -13,3 +13,4 @@ jupyterlab_notebook_folder: "{{ user_home }}/notebooks"
 apt_dependencies:
   - rsync=3.1.3-8ubuntu0.7
   - virtualenv=20.0.17-1ubuntu0.4
+  - git=1:2.25.1-1ubuntu3.11
