--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/requirements_dependencies.txt
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/requirements_dependencies.txt
@@ -1,4 +1,7 @@
 uncertainties==3.1.7
 numpy==1.23.1
 pandas==1.4.3
-exasol-notebook-connector==0.2.4
+scikit-learn==1.0.2
+sacremoses==0.1.1
+--extra-index-url https://download.pytorch.org/whl/cpu
+git+https://github.com/exasol/notebook-connector.git@0.2.6
