#130: Fix python dependencies for notebooks (#131)

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/requirements_dependencies.txt
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/requirements_dependencies.txt
@@ -3,5 +3,9 @@ numpy==1.23.1
 pandas==1.4.3
 scikit-learn==1.0.2
 sacremoses==0.1.1
+matplotlib==3.7.4
+jupysql==0.10.7
+sqlalchemy_exasol==4.6.3
+stopwatch.py==2.0.1
 --extra-index-url https://download.pytorch.org/whl/cpu
 git+https://github.com/exasol/notebook-connector.git@0.2.6
