--- a/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
@@ -9,6 +9,7 @@
         command: "{{ jupyter_virtualenv }}/bin/jupyter-lab"
         user: "{{ user_name }}"
         password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='dss') }}"
+        url: "https://<host>:<port>/lab/tree/start.ipynb"
         logfile: "{{ user_home }}/jupyter-server.log"
       notebook_folder:
         initial: "{{ initial_notebook_folder }}"
