--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/defaults/main.yml
@@ -2,6 +2,7 @@
 
 jupyterlab_ip: '*'
 jupyterlab_config: "{{user_home}}/.jupyter/jupyter_lab_config.py"
+jupyterlab_default_url: "/lab/tree/start.ipynb"
 
 # overridden in include_role
 jupyterlab_virtualenv: "{{ user_home }}/jupyterenv"
@@ -11,6 +12,5 @@ jupyterlab_notebook_folder_initial: "{{ user_home }}/notebooks"
 jupyterlab_notebook_folder: "{{ user_home }}/notebooks"
 
 apt_dependencies:
-  - rsync=3.1.3-8ubuntu0.7
   - virtualenv=20.0.17-1ubuntu0.4
   - git=1:2.25.1-1ubuntu3.11
