--- a/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
@@ -7,6 +7,7 @@
       jupyter:
         virtualenv: "{{ jupyter_virtualenv }}"
         command: "{{ jupyter_virtualenv }}/bin/jupyter-lab"
+        port: "49494"
         user: "{{ user_name }}"
         password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='dss') }}"
         logfile: "{{ user_home }}/jupyter-server.log"
@@ -34,6 +35,7 @@
   vars:
     jupyterlab_virtualenv: "{{ dss_facts.jupyter.virtualenv }}"
     jupyterlab_command: "{{ dss_facts.jupyter.command }}"
+    jupyterlab_port: "{{ dss_facts.jupyter.port }}"
     jupyterlab_password: "{{ dss_facts.jupyter.password }}"
     jupyterlab_notebook_folder_initial: "{{ dss_facts.notebook_folder.initial }}"
     jupyterlab_notebook_folder: "{{ dss_facts.notebook_folder.final }}"
