Updated links in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,10 @@ readme = "README.md"
 
 
 [tool.poetry.urls]
-"Homepage" = "https://github.com/exasol/data-science-sandbox"
-"Documentation" = "https://github.io/exasol/data-science-sandbox"
-"Source" = "https://github.io/exasol/data-science-sandbox"
-"Issues" = "https://github.io/exasol/data-science-sandbox/issues"
+"Homepage" = "https://github.com/exasol/ai-lab"
+"Documentation" = "https://github.io/exasol/ai-lab"
+"Source" = "https://github.io/exasol/ai-lab"
+"Issues" = "https://github.io/exasol/ai-lab/issues"
 
 
 [tool.poetry.dependencies]
