Feature/#79 rename data science sandbox to exasol ai lab (#147)
* Updated error_code_config and changes file
* Updated git reference in exasol/ds/sandbox/templates/ci_code_build.jinja.yaml
* Updated default password
* Update documentation
TBD: images not yet updated

* Renamed AMI prefix
* Updated names of VM images
* Replaced name of GitHub repository in additional places
* Updated additional documentation
* Updated links in pyproject.toml
* Updated project description in pyproject.toml
* Updated name of docker image
* Additional renamings
* Renamed poetry package
* Updated DEFAULT_CHANGE_SET_PREFIX
* Updated AWS asset tag
* Renamed AWS Bucket prefix (folder in bucket)
* Replaced short tag XAL by XAIL
* Release notes, S3: Change title and removed column "S3 URI"
* Updated references in developer guide
* Renamed default filename for Secure Configuration Storage
* Replaced path in AWS bucket by jinja variable and renamed to ai-lab
* Removed file setup_db.ipynb

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,14 @@
 [tool.poetry]
-name = "exasol-data-science-sandbox"
+name = "exasol-ai-lab"
 version = "0.1.0"
-description = "Manages virtual machines for the data science sandbox."
+description = "Provide AI-Lab editions."
 packages = [ {include = "exasol"}, ]
 license = "MIT"
 authors = [
     "Torsten Kilias <torsten.kilias@exasol.com>",
     "Mikhail Beck <mikhail.beck@exasol.com>",
-    "Christoph Kuhnke <christoph.kuhnke@exasol.com>"
+    "Christoph Kuhnke <christoph.kuhnke@exasol.com>",
+    "Maxim Lapan <maxim.lapan@exasol.com>",
 ]
 classifiers = [
    "Programming Language :: Python :: 3",
@@ -19,10 +20,10 @@ readme = "README.md"
 
 
 [tool.poetry.urls]
-"Homepage" = "https://github.com/exasol/data-science-sandbox"
-"Documentation" = "https://github.io/exasol/data-science-sandbox"
-"Source" = "https://github.io/exasol/data-science-sandbox"
-"Issues" = "https://github.io/exasol/data-science-sandbox/issues"
+"Homepage" = "https://github.com/exasol/ai-lab"
+"Documentation" = "https://github.io/exasol/ai-lab"
+"Source" = "https://github.io/exasol/ai-lab"
+"Issues" = "https://github.io/exasol/ai-lab/issues"
 
 
 [tool.poetry.dependencies]
