--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/requirements_dependencies.txt
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/requirements_dependencies.txt
@@ -8,4 +8,4 @@ sqlalchemy_exasol==4.6.3
 stopwatch.py==2.0.1
 boto3==1.26.163
 --extra-index-url https://download.pytorch.org/whl/cpu
-git+https://github.com/exasol/notebook-connector.git@a727532
+git+https://github.com/exasol/notebook-connector.git@0.2.6
