--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -6,7 +6,7 @@ on:
       - "main"
 
 jobs:
-  run_ci_tests:
+  run_build_ai_lab_tests:
     environment: AWS_CI_TESTS
     runs-on: ubuntu-latest
 
@@ -17,7 +17,7 @@ jobs:
      - name: Setup Python & Poetry Environment
        uses: ./.github/actions/prepare_poetry_env
 
-     - name: Run pytest
+     - name: Run build ai-lab tests
        run: >
          poetry run pytest
          --capture=no
@@ -29,3 +29,26 @@ jobs:
          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+
+  run_nodebook_tests:
+    environment: AWS_SAGEMAKER
+    runs-on: ubuntu-latest
+
+    steps:
+     - uses: actions/checkout@v3
+       with:
+         fetch-depth: 0
+     - name: Setup Python & Poetry Environment
+       uses: ./.github/actions/prepare_poetry_env
+
+     - name: Run notebook tests
+       run: >
+         poetry run pytest
+         --capture=no
+         --override-ini=log_cli=true
+         --override-ini=log_cli_level=INFO
+         test/notebook_test_runner/test_notebooks_in_dss_docker_image.py
+       env: # Set the secret as an env variable
+         NBTEST_AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+         NBTEST_AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
+         NBTEST_AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
