--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/requirements_dependencies.txt
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/requirements_dependencies.txt
@@ -2,10 +2,10 @@ uncertainties==3.1.7
 numpy==1.23.1
 pandas==1.4.3
 scikit-learn==1.0.2
-sacremoses==0.1.1
 matplotlib==3.7.4
 jupysql==0.10.7
 sqlalchemy_exasol==4.6.3
 stopwatch.py==2.0.1
+boto3==1.26.163
 --extra-index-url https://download.pytorch.org/whl/cpu
-git+https://github.com/exasol/notebook-connector.git@aa1496f
+git+https://github.com/exasol/notebook-connector.git@0.2.6
