--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -17,9 +17,6 @@ jobs:
      - name: Setup Python & Poetry Environment
        uses: ./.github/actions/prepare_poetry_env
 
-     - name: Show commit message
-       run: echo ${{ github.event.head_commit.message }}
-
      - name: Run build ai-lab tests
        run: >
          poetry run pytest
@@ -33,29 +30,29 @@ jobs:
          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY_SECRET }}
          AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
 
-  run_notebook_tests:
-    if: "contains(github.event.head_commit.message, '[run-notebook-tests]')"
+  run_nodebook_tests:
     environment: AWS_SAGEMAKER
     runs-on: ubuntu-latest
 
+    if: contains(github.event.head_commit.message, '[run-notebook-tests]')
     steps:
      - uses: actions/checkout@v3
        with:
          fetch-depth: 0
-     - name: Free disk space
-       uses: jlumbroso/free-disk-space@main
-       with:
-         tool-cache: true
-         large-packages: false
 
-     - name: Free disk space by removing large directories
-       run: |
-         sudo rm -rf /usr/local/graalvm/
-         sudo rm -rf /usr/local/.ghcup/
-         sudo rm -rf /usr/local/share/powershell
-         sudo rm -rf /usr/local/share/chromium
-         sudo rm -rf /usr/local/lib/node_modules
-         sudo rm -rf /opt/ghc
+      - name: Free disk space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+          large-packages: false
+      - name: Free disk space by removing large directories
+        run: |
+          sudo rm -rf /usr/local/graalvm/
+          sudo rm -rf /usr/local/.ghcup/
+          sudo rm -rf /usr/local/share/powershell
+          sudo rm -rf /usr/local/share/chromium
+          sudo rm -rf /usr/local/lib/node_modules
+          sudo rm -rf /opt/ghc
 
      - name: Setup Python & Poetry Environment
        uses: ./.github/actions/prepare_poetry_env
