--- a/exasol/ds/sandbox/templates/ci_code_build.jinja.yaml
+++ b/exasol/ds/sandbox/templates/ci_code_build.jinja.yaml
@@ -66,6 +66,12 @@ Resources:
                 - s3:ListBucket
                 Resource: arn:aws:s3:::{{vm_bucket}}
                 Effect: Allow
+              - Action:
+                - s3:PutObject
+                - s3:GetObject
+                - s3:DeleteObject
+                Resource: arn:aws:s3:::{{vm_bucket}}/*
+                Effect: Allow
   DataScienceSandboxCICodeBuild:
     Type: AWS::CodeBuild::Project
     Properties:
