--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ rich = "^12.5.1"
 pandas = "^1.4.0"
 humanfriendly = "^10.0"
 tenacity = "^8.2.3"
+pygithub = "^2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest-check-links = "^0.9.0"
