Refactoring/#128 removed unused dependencies (#190)
* Removed unused dependencies
exasol_script_languages_release from pyproject.toml
poetry from ansible/general_setup_tasks.yml
* Removed references to SLC: package exasol_script_languages_release, SLC_VERSION, ansible extra var slc_version, config object
* Removed script language containers, incl. Jupyter notebook and ansible roles, calls from ansible playbook ec2_setup_tasks.yml, Also removed file test_install_dependencies.py
Updated tests involving any of these resources, updated Ansible default run context and tests
* [CodeBuild]
* Fixed review finding Regarding path and content of test recourse ansible_conflict
* Apply suggestions from code review

Co-authored-by: Torsten Kilias <tkilias@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,11 +34,11 @@ jinja2 = ">=3.1.0"
 ansible-runner = "^2.2.1"
 ansible = "^6.1.0"
 importlib_resources = ">=5.4.0"
-exasol_script_languages_release = { git = "https://github.com/exasol/script-languages-release.git", tag = "5.0.0"}
 rich = "^12.5.1"
 pandas = "^1.4.0"
 humanfriendly = "^10.0"
 tenacity = "^8.2.3"
+pygithub = "^2.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest-check-links = "^0.9.0"
