--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,18 +27,19 @@ readme = "README.md"
 
 
 [tool.poetry.dependencies]
-python = ">=3.9.0,<4.0"
+python = ">=3.10.0,<4.0"
 click = "^8.1.3"
 boto3 = "^1.22.0"
 jinja2 = ">=3.1.0"
 ansible-runner = "^2.2.1"
-ansible = "^7.0.0"
+ansible = "^9.2.0"
 importlib_resources = ">=5.4.0"
 rich = "^12.5.1"
 pandas = "^1.4.0"
 humanfriendly = "^10.0"
 tenacity = "^8.2.3"
 pygithub = "^2.2.0"
+importlib-metadata = "^7.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest-check-links = "^0.9.0"
