--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,7 +56,7 @@ pytest-mock = "^3.7.0"
 cfn-lint = "^0.65.1"
 gitpython = ">=2.1.0"
 localstack = "^3.1.0"
-docker = {version = ">=5.0.0", markers = "sys_platform != 'win32'"}
+docker = {version = ">=5.0.0, <7.0.0", markers = "sys_platform != 'win32'"}
 fabric = "^2.7.1"
 
 [tool.pytest.ini_options]
