--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ cfn-lint = "^0.65.1"
 gitpython = ">=2.1.0"
 localstack = "^3.1.0"
 # docker 7.0.0 is broken
+# see https://github.com/docker/docker-py/issues/3223
 docker = {version = "^6.1.3", markers = "sys_platform != 'win32'"}
 fabric = "^2.7.1"
 
