Used a non-root user to run Jupyter in the Docker Image ai-lab
Additionally Same as AMI and VM Editions also the Docker Edition uses a
non-root user for executing the ansible installation.

--- a/exasol/ds/sandbox/runtime/ansible/ec2_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/ec2_playbook.yml
@@ -8,6 +8,7 @@
       need_sudo: yes
   remote_user: ubuntu
   tasks:
+    - import_tasks: apt_update.yml
     - import_tasks: general_setup_tasks.yml
     - import_tasks: ec2_setup_tasks.yml
     - import_tasks: cleanup_tasks.yml
