--- a/exasol/ds/sandbox/runtime/ansible/roles/docker/tasks/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/docker/tasks/main.yml
@@ -3,6 +3,7 @@
     name: "{{apt_dependencies}}"
     state: latest
     update_cache: true
+    install_recommends: false
   become: "{{need_sudo}}"
 
 - name: Add Docker GPG apt Key
@@ -22,6 +23,7 @@
     name: docker-ce
     state: latest
     update_cache: true
+    install_recommends: false
   become: "{{need_sudo}}"
 
 - name: Adding docker users (for use without sudo)
