--- a/exasol/ds/sandbox/runtime/ansible/roles/entrypoint/tasks/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/entrypoint/tasks/main.yml
@@ -3,3 +3,6 @@
     src: "entrypoint.py"
     dest: "{{ dss_facts.entrypoint }}"
     mode: 0644
+    group: "{{ user_group }}"
+    owner: "{{ user_name }}"
+  become: "{{need_sudo}}"
