--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
@@ -7,6 +7,7 @@
       apt:
         name: "{{apt_dependencies}}"
         state: present
+        install_recommends: false
       become: "{{need_sudo}}"
 
     - name: Update pip version
