--- a/exasol/ds/sandbox/runtime/ansible/roles/netplan/tasks/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/netplan/tasks/main.yml
@@ -3,6 +3,7 @@
     name: "{{apt_dependencies}}"
     state: latest
     update_cache: true
+    install_recommends: false
   become: "{{need_sudo}}"
 
 - name: Copy 01-network-manager.yaml file
