--- a/exasol/ds/sandbox/runtime/ansible/roles/rsync/tasks/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/rsync/tasks/main.yml
@@ -3,4 +3,5 @@
     name: "{{apt_dependencies}}"
     state: latest
     update_cache: true
+    install_recommends: false
   become: "{{need_sudo}}"
