--- a/exasol/ds/sandbox/runtime/ansible/ai_lab_docker_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/ai_lab_docker_playbook.yml
@@ -10,19 +10,33 @@
         groups: docker_container_group
         ansible_connection: docker
 
-- name: Setup AI-Lab Docker Container
+- name: Prepare Ansible Access
   hosts: docker_container_group
   gather_facts: true
   vars:
-      ansible_python_interpreter: python3
-      # user_name: "{{ ansible_user_id }}"
-      # user_home: "{{ ansible_env.HOME }}"
-      user_name: "jupyter"
-      user_home: "/home/jupyter"
-      initial_notebook_folder: "{{ user_home }}/notebook-defaults"
-      need_sudo: false
-      docker_integration_test: true
+    my_ansible_user: "ansible"
+    jupyter_user: "jupyter"
+    jupyter_group: "jupyter"
+    jupyter_user_home: "/home/jupyter"
+    need_sudo: yes
   tasks:
-    - import_tasks: create_jupyter_user.yml
+    - import_tasks: apt_update.yml
+    - name: Ansible Access
+      include_role:
+        name: ansible_access
+
+- name: Setup AI-Lab Docker Container
+  hosts: docker_container_group
+  remote_user: "ansible"
+  gather_facts: true
+  vars:
+    ansible_python_interpreter: python3
+    user_name: "jupyter"
+    user_group: "jupyter"
+    user_home: "/home/jupyter"
+    initial_notebook_folder: "{{ user_home }}/notebook-defaults"
+    need_sudo: yes
+    docker_integration_test: true
+  tasks:
     - import_tasks: general_setup_tasks.yml
     - import_tasks: cleanup_tasks.yml
