--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/requirements_jupyter.txt
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/requirements_jupyter.txt
@@ -1,4 +1,5 @@
-jupyterlab==4.1.1
+jupyterlab==4.0.6
+# jupyterlab==4.1.1
 # enable interactive Javascript widgets in the notebooks
 ipywidgets==8.1.1
 pexpect==4.8.0
