--- a/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
+++ b/exasol/ds/sandbox/runtime/ansible/general_setup_tasks.yml
@@ -9,7 +9,7 @@
         command: "{{ jupyter_virtualenv }}/bin/jupyter-lab"
         port: "49494"
         user: "{{ user_name }}"
-        password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='ai-lab') }}"
+        password: "{{ lookup('ansible.builtin.env', 'JUPYTER_LAB_PASSWORD', default='ailab') }}"
         logfile: "{{ user_home }}/jupyter-server.log"
       notebook_folder:
         initial: "{{ initial_notebook_folder }}"
