Fixed ansible tasks
added dependency to gpg-agent

--- a/exasol/ds/sandbox/runtime/ansible/ai_lab_docker_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/ai_lab_docker_playbook.yml
@@ -4,7 +4,7 @@
   vars:
       ansible_python_interpreter: python3
   tasks:
-    - name: Add docker container to inventory
+    - name: Add Docker Container to Ansible Inventory
       add_host:
         name: "{{docker_container}}"
         groups: docker_container_group
