--- a/exasol/ds/sandbox/runtime/ansible/roles/docker/defaults/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/docker/defaults/main.yml
@@ -2,5 +2,6 @@
 
 apt_dependencies:
   - apt-transport-https=2.0.10
+  - gpg-agent=2.2.19-3ubuntu2.2
   - ca-certificates=20230311ubuntu0.20.04.1
   - software-properties-common=0.99.9.12
