--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/jupyterlab.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/jupyterlab.yml
@@ -44,6 +44,7 @@
       Verify password: "{{jupyterlab_password}}"
   environment:
     HOME: "{{ user_home }}"
+  become: "{{ need_sudo }}"
 
 - name: Create the notebook directory
   ansible.builtin.file:
