--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/tasks/main.yml
@@ -16,18 +16,18 @@
 
     - name: Install JupyterLab and required packages
       include_tasks:
-        file: install-pip-packages.yml
+        file: pip-install.yml
       vars:
-        pip_requirements_file: "jupyter_requirements.txt"
+        requirements_file: "jupyter_requirements.txt"
 
     - name: Setup Jupyterlab
       ansible.builtin.import_tasks: jupyterlab.yml
 
     - name: Install packages to be used inside Jupyter notebooks
       include_tasks:
-        file: install-pip-packages.yml
+        file: pip-install.yml
       vars:
-        pip_requirements_file: "notebook_requirements.txt"
+        requirements_file: "notebook_requirements.txt"
 
     - name: Setup Systemd service
       ansible.builtin.import_tasks: systemd.yml
