--- a/.github/workflows/check_ci.yaml
+++ b/.github/workflows/check_ci.yaml
@@ -14,6 +14,25 @@ jobs:
      - uses: actions/checkout@v3
        with:
          fetch-depth: 0
+
+     - name: Free disk space
+       uses: jlumbroso/free-disk-space@main
+       with:
+         tool-cache: true
+         large-packages: false
+
+     - name: Free disk space by removing large directories
+       run: |
+         sudo rm -rf /usr/local/graalvm/
+         sudo rm -rf /usr/local/.ghcup/
+         sudo rm -rf /usr/local/share/powershell
+         sudo rm -rf /usr/local/share/chromium
+         sudo rm -rf /usr/local/lib/node_modules
+         sudo rm -rf /opt/ghc
+
+     - name: Show available disk space
+       run: df -h
+
      - name: Setup Python & Poetry Environment
        uses: ./.github/actions/prepare_poetry_env
 
@@ -39,6 +58,7 @@ jobs:
      - uses: actions/checkout@v3
        with:
          fetch-depth: 0
+
      - name: Free disk space
        uses: jlumbroso/free-disk-space@main
        with:
