--- a/exasol/ds/sandbox/runtime/ansible/ec2_playbook.yml
+++ b/exasol/ds/sandbox/runtime/ansible/ec2_playbook.yml
@@ -2,8 +2,9 @@
   hosts: ec2
   vars:
       ansible_python_interpreter: /usr/bin/python3
-      user_name: ubuntu
-      user_home: /home/ubuntu
+      user_name: jupyter
+      user_home: /home/jupyter
+      user_group: jupyter
       initial_notebook_folder: "{{ user_home }}/notebooks"
       need_sudo: yes
   remote_user: ubuntu
